crates/smart-config/tests/ui/config/embedded_paths.rs
fn main() {
    smart_config::config!("test": 1, "test.path": 2);
}
